Checkpoint before assistant change: Ensure the main image is always visible and not obscured by other page elements
Adds utility classes for height, width, and margin to improve image layering.

--- a/public/out.css
+++ b/public/out.css
@@ -576,6 +576,11 @@ video {
   margin-right: auto;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -648,6 +653,10 @@ video {
   height: 80vh;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .h-full {
   height: 100%;
 }
@@ -686,6 +695,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-\[85\%\] {
