--- a/public/style.css
+++ b/public/style.css
@@ -576,6 +576,11 @@ video {
   margin-right: auto;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -676,6 +681,10 @@ video {
   height: auto;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -706,6 +715,10 @@ video {
 
 .w-4 {
   width: 1rem;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .min-w-\[60px\] {
